# LLM_based_stock_sentiment

./: .env  .env.example  .gitignore  README.md  package-lock.json  project_design.md  pyproject.toml  requirements.txt
backend/: main.py
backend/api/: news_crawler.py  routes.py
backend/core/: news_crawler.py  sentiment_analyzer.py  stock_cache.py
backend/utils/: config.py  gemini_utils.py  openai_utils.py
data/news_cache/: 000001.json  000004.json  000020.json  000028.json  000032.json  000045.json  000066.json  000089.json  000153.json  000155.json  000425.json  000430.json  000543.json  000544.json  000545.json  000546.json  000560.json  000603.json  000612.json  000625.json  000632.json  000650.json  000722.json  000735.json  000736.json  000816.json  001234.json  001338.json  002235.json  002365.json  002387.json  002412.json  002446.json  002574.json  002848.json  003000.json  003002.json  003009.json  300017.json  300250.json  (+11 more)
data/sentiment_cache/: -4190026002199141456.json  1053995710810167644_31.json  1128501226514771770_20.json  1171902252576136616_20.json  1274682411536750197_20.json  1316426257277503889_20.json  1500121919727778265_20.json  1532462590891689024_20.json  1858870601369447574_20.json  1862910204620114218_18.json  1904085495052852506_26.json  2311197924418838208_20.json  2559950639842590806_20.json  2563031874765596949_20.json  2730242351777604778_20.json  (+50 more)
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-streamlit/: README.md  main.py
tests/: test_gemini_api.py
(+13 files in other folders)
